fix: correct nullable flags in transformedSchema; add region granularity comment
- monument and region fields are nullable=false after explode/regexp_replace
- Add comment explaining sub-region vs oblast-level divergence from Monument.getRegionId
- Add transformedSchema contract assertion to schema test
- Remove duplicate --add-opens sun.nio.ch JVM flag

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>